--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
   <title>Inseung Kang</title>
   
-  <meta name="author" content="Inseung Kang">
+  <meta name="author" content="Po Chuan Chen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 </head>
+
 <body>
 <h1>Hello World</h1>
 <p>test</p>
