--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  </table>
 <h1>Hello World</h1>
 <p>test</p>
 </body>
