--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 	              <p style="text-align:center">
 	                  <name><b>Po Chuan Chen</b></name>
 	              </p>
+	              <p>
+	              	Hi! My name is.
+	              </p>
 	            </td>
 	          </tr>
   </table>
-<h1>Hello World</h1>
-<p>123</p>
 </body>
 </html>
