--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>Inseung Kang</title>
   
-  <meta name="author" content="Inseung Kang">
+  <meta name="author" content="Po Chuan Chen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
@@ -28,17 +28,17 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                  <name><b>Inseung Kang, Ph.D.</b></name>
+                  <name><b>Po Chuan Chen.</b></name>
               </p>
               <p>
-              	Hi! My name is Inseung Kang. I'm currently a postdoctoral associate in the Department of Brain and Cognitive Sciences at MIT working with Dr. Nidhi Seethapathi (<a href="https://seethapathilab.org/">Seethapathi Motor Control Lab</a>). Here, I'm working on developing predictive models of human movement and understanding how humans adapt to new locomotor tasks. Particularly, I'm using reinforcement learning, dynamics, and control to tackle this problem.
+              	Hi! My name is Po Chuan Chen.
               </p>
               <p>
-                Before joining MIT, I worked with Dr. Aaron Young (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received my BS, MS, and PhD in mechanical engineering. I largely worked on developing different control frameworks for robotic exoskeletons. My research portfolio is fairly diverse, ranging from designing versatile mechatronic platforms to developing robust machine learning-based models. Generally, my work revolves around a better understanding of human movements and designing wearable devices that allow for improved human mobility. My long-term research goal is to develop wearable interventions that are of good value to people with limited mobility.
+                I worked with Dr. Aaron Young (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received .
 
               </p>
               <p style="text-align:center">
-                <a href="mailto:inseung@mit.edu">Email</a> &nbsp/&nbsp
+                <a href="mailto:pchen353@gatech.edu">Email</a> &nbsp/&nbsp
                 <a href="data/InseungKang_CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=jcgAPTYAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/inseung-kang-1632a4b1/">Linkedin</a> &nbsp/&nbsp
