--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           </tr>
 
         </tbody></table>
-<!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          <tr onmouseout="ABME_2022()" onmouseover="ABME_2022()">
+<!--          <tr onmouseout="ABME_2022()" onmouseover="ABME_2022()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/PanKang_ABME2022.png' width="175">
