--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   gtag('config', 'G-TEE3WKRJMR');
 </script>
 
-  <title>Inseung Kang</title>
+  <title>Po Chuan Chen</title>
   
   <meta name="author" content="Po Chuan Chen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
