--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <name><b>Po Chuan Chen.</b></name>
               </p>
               <p>
-              	Hi! My name is Po Chuan Chen (陳博詮). I am an enthusiastic exoskeleton maker with solid training in control and real-time system. Currently, I am worknig in Dr. Aaron Young's lab (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received my MS in Electrical and Computer Enginneering and specilized in control.
+              	Hi! My name is Po Chuan Chen (陳博詮). I am an enthusiastic exoskeleton maker with solid training in control and real-time system. Currently, I am worknig in Dr. Aaron Young's lab (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received my MS in Electrical and Computer Enginneering and specilized in control. In the lab, I am working on developing Develop novel exoskeleton controllers allowing robust adaptation to various walking conditions.
 <!--                 My name is Kevin Chih-Yao Ma (馬志堯). I am a Senior Research Scientist at Meta (formerly known as Facebook). In recent years, I have been primarily focusing data-efficient learning, including semi-supervised learning, self-supervised learning, federated learning, etc. Previously, I have conducted researches on large-scale video classification, fine-grained human action recognition, relational reasoning for video understanding, visually grounded image/video captioning, and vision-and-language navigation agents. -->
               </p>
               <p>
