--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--                 My name is Kevin Chih-Yao Ma (馬志堯). I am a Senior Research Scientist at Meta (formerly known as Facebook). In recent years, I have been primarily focusing data-efficient learning, including semi-supervised learning, self-supervised learning, federated learning, etc. Previously, I have conducted researches on large-scale video classification, fine-grained human action recognition, relational reasoning for video understanding, visually grounded image/video captioning, and vision-and-language navigation agents. -->
               </p>
               <p>
-                Before I came to Georgia Tech, I was a 3.5-year embedded software engineer in the television department at Mediatek. I mainly developed digital image processing algorithms and debugged issues in real-time system. Except industrial experience, I also have done some academic researches, including liquid crystal lense for 3D dispaly, music genere classification, natural language processing, and exoskeletons.
+                Before I came to Georgia Tech, I was a 3.5-year embedded software engineer in the television department at <a href="https://mediatek-marketing-production.cl-us-east-4.servd.dev/">Mediatek</a>. I mainly developed digital image processing algorithms and debugged issues in real-time system. Except industrial experience, I also have done some academic researches, including liquid crystal lense for 3D dispaly, music genere classification, natural language processing, and exoskeletons.
 <!--                 I worked with Dr. Aaron Young (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received . -->
 
               </p>
