--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -27,8 +26,8 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
-              <p style="text-align:center">
-                  <name><b>Po Chuan Chen.</b></name>
+              <p style="text-align:center" style="font-size:15;">
+                  <name><b>Po Chuan Chen</b></name>
               </p>
               <p>
               	Hi! My name is Po Chuan Chen (陳博詮). I am an enthusiastic exoskeleton maker with solid training in control and real-time system. Currently, I am worknig in Dr. Aaron Young's lab (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received my MS in Electrical and Computer Enginneering and specilized in control. In the lab, I am working on developing novel exoskeleton controllers allowing robust adaptation to various walking conditions.
