--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
-              <p style="text-align:center" style="font-size:15;">
+              <p style="text-align:center;font-size:15">
                   <name><b>Po Chuan Chen</b></name>
               </p>
               <p>
@@ -40,10 +40,10 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:pchen353@gatech.edu">Email</a> &nbsp/&nbsp
-                <a href="data/InseungKang_CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=jcgAPTYAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/inseung-kang-1632a4b1/">Linkedin</a> &nbsp/&nbsp
-                <a href="https://twitter.com/inseungkang">Twitter</a>
+<!--                 <a href="data/InseungKang_CV.pdf">CV</a> &nbsp/&nbsp -->
+<!--                 <a href="https://scholar.google.com/citations?user=jcgAPTYAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp -->
+                <a href="linkedin.com/in/pchen353/">Linkedin</a> &nbsp/&nbsp
+                <a href="https://twitter.com/po1057">Twitter</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -56,7 +56,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading><b>Research</b></heading>
               <p>
-                After years of exploring different types of research topics, I found my passion in human mobility augmant with wearable robotics. 
+                After years of exploring different types of research topics, I found my passion in human mobility augmant with wearable robotics. I'm interested in Machine Learning, Adaptive/Optimal Control, and Biomechanics. In the past two years, I have conducted researches on developing controllers for the high torque hip exoskeleton.  
 <!--                 I'm interested in Robotics, Control, Machine Learning, Motor Learning, Optimization, and Biomechanics. Much of my research explores how to optimize control strategies for maximizing human outcome measures when using wearable systems such as robotic exoskeletons. Mainly, I tackle these research questions by developing advanced inferences that can estimate and predict the user's intent during locomotion. -->
               </p>
             </td>
