--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/InseungKang.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/InseungKang.jpg" class="hoverZoomLink"></a>
+              <a href="images/PXL_20230502_201954330.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/PXL_20230502_201954330.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
