--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </tbody></table>
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-<!--          <tr onmouseout="ABME_2022()" onmouseover="ABME_2022()">
+         <tr onmouseout="ABME_2022()" onmouseover="ABME_2022()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/PanKang_ABME2022.png' width="175">
@@ -83,7 +83,7 @@
             </td>
           </tr> 
 
-          <tr onmouseout="JMR_2022()" onmouseover="JMR_2022()">
+<!--           <tr onmouseout="JMR_2022()" onmouseover="JMR_2022()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/Kang_JMR2022.jpg' width="175">
