--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </tbody></table>
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-         <tr onmouseout="ABME_2022()" onmouseover="ABME_2022()">
+         <tr onmouseout="ASB_2023()" onmouseover="ASB_2023()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/PanKang_ABME2022.png' width="175">
+                <img src='images/result comparision_2.png' width="175">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
