--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Effects of Bilateral Assistance for Hemiparetic Gait Post-Stroke Using a Powered Hip Exoskeleton</papertitle>
+                <papertitle>Which hip model best predicts biological torques across modes? A simulation study</papertitle>
                 <br>
-              Yi-Tsen Pan*, <strong>Inseung Kang*</strong>, James Joh, Patrick Kim, Kinsey Herrin, Trisha Kesar, Gregory Sawicki, Aaron Young (* co-first author)
+              <strong>Po Chuan Chen</strong>, Benjamin A. Shafer1*, Wei-Lin Du, Aaron J. Young, Gregory S. Sawicki
               <br>
-        <em>Annals of Biomedical Engineering</em>, 2022  
+        <em>American Society of Biomechanics</em>, 2023  
               <a href="https://doi.org/10.1007/s10439-022-03041-9">Link</a>
               <p></p>
             </td>
