--- a/index.html
+++ b/index.html
@@ -83,6 +83,24 @@
             </td>
           </tr> 
 
+           
+           <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/result comparision_2.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Which hip model best predicts biological torques across modes? A simulation study</papertitle>
+                <br>
+              <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
+              <br>
+        <em>American Society of Biomechanics</em>, 2023  
+              <a href=" https://doi.org/10.1889/1.3621246">Link</a>
+              <p></p>
+            </td>
+          </tr> 
 <!--           <tr onmouseout="JMR_2022()" onmouseover="JMR_2022()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
