--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <p>
                 <papertitle>Which hip model best predicts biological torques across modes? A simulation study</papertitle>
                 <br>
-              <strong>Po Chuan Chen</strong>, Benjamin A. Shafer1*, Wei-Lin Du, Aaron J. Young, Gregory S. Sawicki
+              <strong>Po Chuan Chen</strong>, Benjamin A. Shafer, Wei-Lin Du, Aaron J. Young, Gregory S. Sawicki
               <br>
         <em>American Society of Biomechanics</em>, 2023  
               <a href="https://doi.org/10.1007/s10439-022-03041-9">Link</a>
