--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading><b>Research</b></heading>
               <p>
-                After years of exploring different types of research topics, I found my passion in human mobility augmant with wearable robotics. I'm interested in Machine Learning, Adaptive/Optimal Control, and Biomechanics. In the past two years, I have conducted researches on developing controllers for the high torque hip exoskeleton.  
+                Through extensive exploration of different research areas, I have found my true passion in enhancing human mobility with wearable robotics. My primary interest centers on the intersection of Biomechanics, Adaptive/Optimal Control, and Machine Learning. For the last two years, I have focused on developing controllers for a high-torque hip exoskeleton.
 <!--                 I'm interested in Robotics, Control, Machine Learning, Motor Learning, Optimization, and Biomechanics. Much of my research explores how to optimize control strategies for maximizing human outcome measures when using wearable systems such as robotic exoskeletons. Mainly, I tackle these research questions by developing advanced inferences that can estimate and predict the user's intent during locomotion. -->
               </p>
             </td>
