--- a/index.html
+++ b/index.html
@@ -107,6 +107,25 @@
               <heading><b>Project</b></heading>
             </td>
           </tr>
+          
+          
+          <tr onmouseout="Music Genre Classification()" onmouseover="Music Genre Classification()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Music Genre Classification.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Dual Directional Overdriving Method for Fast Response LC-lenses on Autostereoscopic 3D Display</papertitle>
+                <br>
+              <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
+              <br>
+        <em>Society for Information Dispaly</em>, 2011  
+              <a href=" https://doi.org/10.1889/1.3621246">Link</a>
+              <p></p>
+            </td>
+          </tr> 
 <!--           <tr onmouseout="JMR_2022()" onmouseover="JMR_2022()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
