--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Dual Directional Overdriving Method for Fast Response LC-lenses on Autostereoscopic 3D Display</papertitle>
+                <papertitle>Music Genre Classification</papertitle>
                 <br>
               <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
               <br>
         <em>Society for Information Dispaly</em>, 2011  
-              <a href=" https://doi.org/10.1889/1.3621246">Link</a>
+              <a href=" https://www.youtube.com/watch?v=8SLx2H6cLKg">Link</a>
               <p></p>
             </td>
           </tr> 
