--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </tr>
           
           
-          <tr onmouseout="Music Genre Classification()" onmouseover="Music Genre Classification()">
+          <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/Music Genre Classification.png' width="175">
