--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/Music Genre Classification.png' width="175">
+<!--                 <img src='images/Music Genre Classification.png' width="175"> -->
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
