--- a/index.html
+++ b/index.html
@@ -112,16 +112,15 @@
           <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-<!--                 <img src='images/Music Genre Classification.png' width="175"> -->
+                <img src='images/Music Genre Classification.png' width="175">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
                 <papertitle>Music Genre Classification</papertitle>
                 <br>
-              <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
-              <br>
-        <em>Society for Information Dispaly</em>, 2011  
+              <strong>Po Chuan Chen</strong>
+              <br> 
               <a href=" https://www.youtube.com/watch?v=8SLx2H6cLKg">Link</a>
               <p></p>
             </td>
