--- a/index.html
+++ b/index.html
@@ -109,19 +109,20 @@
           </tr>
           
           
-          <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
+           <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/Music Genre Classification.png' width="175">
+                <img src='images/SID.png' width="175">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Music Genre Classification</papertitle>
+                <papertitle>Dual Directional Overdriving Method for Fast Response LC-lenses on Autostereoscopic 3D Display</papertitle>
                 <br>
-              <strong>Po Chuan Chen</strong>
-              <br> 
-              <a href=" https://www.youtube.com/watch?v=8SLx2H6cLKg">Link</a>
+              <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
+              <br>
+        <em>Society for Information Dispaly</em>, 2011  
+              <a href=" https://doi.org/10.1889/1.3621246">Link</a>
               <p></p>
             </td>
           </tr> 
