--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
               <heading><b>Project</b></heading>
             </td>
           </tr>
+         </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
           
            <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
