--- a/index.html
+++ b/index.html
@@ -111,20 +111,19 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
           
-           <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
+           <tr onmouseout="Music Genre Classification()" onmouseover="Music Genre Classification()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/SID.png' width="175">
+                <img src='images/Music Genre Classification.png' width="175">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Dual Directional Overdriving Method for Fast Response LC-lenses on Autostereoscopic 3D Display</papertitle>
+                <papertitle>Music Genre Classification</papertitle>
                 <br>
-              <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
+              Utilized convolutional deep belief network on the acoustic spectrum to extract image features for classifying music genres, such as classic and metal music.
               <br>
-        <em>Society for Information Dispaly</em>, 2011  
-              <a href=" https://doi.org/10.1889/1.3621246">Link</a>
+              <a href="https://www.youtube.com/watch?v=8SLx2H6cLKg">Link</a>
               <p></p>
             </td>
           </tr> 
