--- a/index.html
+++ b/index.html
@@ -123,7 +123,23 @@
                 <br>
               Utilized convolutional deep belief network on the acoustic spectrum to extract image features for classifying music genres, such as classic and metal music.
               <br>
-              <a href="https://www.youtube.com/watch?v=8SLx2H6cLKg">Link</a>
+              <p></p>
+            </td>
+          </tr> 
+          
+           <tr onmouseout="Natural Languages Processing()" onmouseover="Natural Languages Processing()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Natural Languages Processing.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Music Genre Classification</papertitle>
+                <br>
+                  Proposed a natural language processing project with recursive neural network and Word2Vec on sentiment analysis on Chinese post.
+                 <br>
+<!--               <a href="https://www.youtube.com/watch?v=8SLx2H6cLKg">Link</a> -->
               <p></p>
             </td>
           </tr> 
