--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Music Genre Classification</papertitle>
+                <papertitle>Natural Languages Processing</papertitle>
                 <br>
                   Proposed a natural language processing project with recursive neural network and Word2Vec on sentiment analysis on Chinese post.
                  <br>
