--- a/index.html
+++ b/index.html
@@ -143,6 +143,23 @@
               <p></p>
             </td>
           </tr> 
+          
+         <tr onmouseout="Reinforcement Learning for inverted pendulum balance()" onmouseover="Reinforcement Learning for inverted pendulum balance()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Inverted Pendulum.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Natural Languages Processing</papertitle>
+                <br>
+                  Used reinforcement learning to balance an inverted pendulum.
+                 <br>
+              <a href="https://youtu.be/0mPZffdVxEE">Link</a>
+              <p></p>
+            </td>
+          </tr> 
 <!--           <tr onmouseout="JMR_2022()" onmouseover="JMR_2022()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
