--- a/index.html
+++ b/index.html
@@ -152,11 +152,28 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Natural Languages Processing</papertitle>
+                <papertitle>Inverted Pendulum</papertitle>
                 <br>
                   Used reinforcement learning to balance an inverted pendulum.
                  <br>
               <a href="https://youtu.be/0mPZffdVxEE">Link</a>
+              <p></p>
+            </td>
+          </tr> 
+          
+         <tr onmouseout="Interactive Plastic Box()" onmouseover="Interactive Plastic Box()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Interactive Plastic Box.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Interactive Plastic Box</papertitle>
+                <br>
+                 Utilized Super Machine Vector (SVM) for classifying acoustic spectrum
+                 <br>
+              <a href="https://youtu.be/N6SZp3iKMmE">Link</a>
               <p></p>
             </td>
           </tr> 
