--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Interactive Plastic Box</papertitle>
+                <papertitle>Hand Exoskeleton</papertitle>
                 <br>
                  Built an exoskeleton‑based rehabilitation system from scratch, including mechanical structure, control system, and electronic design, for patients with peripheral nerve injuries. The system was controlled via electromyography (EMG) of the patient and was operated on an Arduino embedded development board.
                  <br>
-              <a href="https://youtu.be/htrTbyREnqU">Link</a>
+              <a href="https://youtu.be/8SLx2H6cLKg">Link</a>
               <p></p>
             </td>
           </tr> 
