--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <p>
                 <papertitle>Hip Exoskeleton</papertitle>
                 <br>
-                 Develop novel exoskeleton controllers allowing robust adaptation to various walking conditions. The controllers are based on the electromyography-driven neuromuscular model to simulate muscle activities and biological torque for a high-torque hip exoskeleton. The primary purpose of this research is to reduce metabolic costs for older people at their self-select-waking speed.
+                 Develop novel exoskeleton controllers allowing robust adaptation to various walking conditions. The controllers are based on the electromyography-driven neuromuscular model to simulate muscle activities and biological torque for a high-torque hip exoskeleton. The primary purpose of this research is to reduce metabolic costs for older people at their self-select-walking speed.
                  <br>
 <!--               <a href="https://youtu.be/8SLx2H6cLKg">Link</a> -->
               <p></p>
@@ -206,7 +206,7 @@
               <p>
                 <papertitle>Interactive Plastic Box</papertitle>
                 <br>
-                 Utilized Super Machine Vector (SVM) for classifying acoustic spectrum
+                 Utilized Support Machine Vector (SVM) for classifying acoustic spectrum
                  <br>
               <a href="https://youtu.be/N6SZp3iKMmE">Link</a>
               <p></p>
