--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <br>
               <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
               <br>
-        <em>Society for Information Dispaly</em>, 2011  
+        <em>Society for Information Display</em>, 2011  
               <a href=" https://doi.org/10.1889/1.3621246">Link</a>
               <p></p>
             </td>
