--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <tr onmouseout="Hip Exoskeleton()" onmouseover="Hip Exoskeleton()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-<!--                 <img src='images/hand_exo.png' width="175"> -->
+                <img src='images/hhip_exo.jpg' width="175">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
