--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <strong>Po Chuan Chen</strong>, Benjamin A. Shafer, Wei-Lin Du, Aaron J. Young, Gregory S. Sawicki
               <br>
         <em>American Society of Biomechanics</em>, 2023  
-              <a href="https://doi.org/10.1007/s10439-022-03041-9">Link</a>
+              <!-- <a href="https://doi.org/10.1007/s10439-022-03041-9">Link</a> -->
               <p></p>
             </td>
           </tr> 
@@ -208,6 +208,7 @@
                 <br>
                  Utilized Support Machine Vector (SVM) for classifying acoustic spectrum
                  <br>
+                 Oct 2013 ‑ July 2015
               <a href="https://youtu.be/N6SZp3iKMmE">Link</a>
               <p></p>
             </td>
