--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <p>
                 <papertitle>An Instrumented Glove-Controlled Portable Hand-Exoskeleton for Bilateral Hand Rehabilitation</papertitle>
                 <br>
-              Shih-Hung Yang ,Chia-Lin Koh ,Chun-Hang Hsu,<strong>Po-Chuan Chen</strong>,Jia-Wei Chen,Yu-Hao Lan,Yi Yang,Yi-De Lin,Chun-Hung Wu,Hsien-Kuang Liu,Yu-Chun Lo,Guan-Tze Liu,Chao-Hung Kuo, and You-Yin Chen
+              Shih-Hung Yang ,Chia-Lin Koh ,Chun-Hang Hsu,<strong>Po Chuan Chen</strong>,Jia-Wei Chen,Yu-Hao Lan,Yi Yang,Yi-De Lin,Chun-Hung Wu,Hsien-Kuang Liu,Yu-Chun Lo,Guan-Tze Liu,Chao-Hung Kuo, and You-Yin Chen
               <br>
         <em>Biosensors</em>, 2011  
               <a href="doi: 10.3390/bios11120495.">Link</a>
