--- a/index.html
+++ b/index.html
@@ -81,8 +81,45 @@
               <!-- <a href="https://doi.org/10.1007/s10439-022-03041-9">Link</a> -->
               <p></p>
             </td>
-          </tr> 
-           
+        </tr> 
+
+        <tr onmouseout="Biosensors_2021()" onmouseover="Biosensors_2021()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Biosensors_2021.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>An Instrumented Glove-Controlled Portable Hand-Exoskeleton for Bilateral Hand Rehabilitation</papertitle>
+                <br>
+              Shih-Hung Yang ,Chia-Lin Koh, Chun-Hang Hsu, <strong>Po Chuan Chen</strong>, Jia-Wei Chen, Yu-Hao Lan, Yi Yang, Yi-De Lin, Chun-Hung Wu, Hsien-Kuang Liu, Yu-Chun Lo, Guan-Tze Liu, Chao-Hung Kuo, You-Yin Chen
+              <br>
+        <em>Biosensors</em>, 2021  
+              <a href="https://www.mdpi.com/1389454">Link</a>
+              <p></p>
+            </td>
+        </tr> 
+
+        <tr onmouseout="Brain_Stimulation_2021()" onmouseover="Brain_Stimulation_2021()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Brain Stimulation.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>A proof-of-principle simulation for closed-loop control based on preexisting experimental thalamic DBS-enhanced instrumental learning</papertitle>
+                <br>
+              Ching-Fu Wang, Shih-Hung Yang, Sheng-Huang Lin, <strong>Po Chuan Chen</strong>, Yu-Chun Lo, Han-Chi Pan, Hsin-Yi Lai, Lun-De Liao, Hui-Ching Lin, Hsu-Yan Chen, Wei-Chen Huang, Wun-Jhu Huang, You-Yin Chen
+              <br>
+        <em>Brain Stimulation</em>, 2017
+              <a href="https://doi.org/10.1016/j.brs.2017.02.004">Link</a>
+              <p></p>
+            </td>
+        </tr> 
+
+
         <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -97,25 +134,6 @@
               <br>
         <em>Society for Information Display</em>, 2011  
               <a href=" https://doi.org/10.1889/1.3621246">Link</a>
-              <p></p>
-            </td>
-        </tr> 
-           
-
-        <tr onmouseout="Biosensors_2021()" onmouseover="Biosensors_2021()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/Biosensors_2021.png' width="175">
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <p>
-                <papertitle>An Instrumented Glove-Controlled Portable Hand-Exoskeleton for Bilateral Hand Rehabilitation</papertitle>
-                <br>
-              Shih-Hung Yang ,Chia-Lin Koh ,Chun-Hang Hsu,<strong>Po Chuan Chen</strong>,Jia-Wei Chen,Yu-Hao Lan,Yi Yang,Yi-De Lin,Chun-Hung Wu,Hsien-Kuang Liu,Yu-Chun Lo,Guan-Tze Liu,Chao-Hung Kuo, and You-Yin Chen
-              <br>
-        <em>Biosensors</em>, 2011  
-              <a href="doi: 10.3390/bios11120495.">Link</a>
               <p></p>
             </td>
         </tr> 
