--- a/index.html
+++ b/index.html
@@ -119,6 +119,23 @@
             </td>
         </tr> 
 
+        <tr onmouseout="Front_Neurosci_2016()" onmouseover="Front_Neurosci_2016()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Front_Neurosci_2016.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>A Sliced Inverse Regression (SIR) Decoding the Forelimb Movement from Neuronal Spikes in the Rat Motor Cortex</papertitle>
+                <br>
+              Shih-Hung Yang, You-Yin Chen, Sheng-Huang Lin, Lun-De Liao, Henry Horng-Shing Lu, Ching-Fu Wang, <strong>Po Chuan Chen</strong>, Yu-Chun Lo, Thanh Dat Phan, Hsiang-Ya Chao, Hui-Ching Lin, Hsin-Yi Lai, Wei-Chen Huang
+              <br>
+        <em>Front Neurosci</em>, 2016
+              <a href="https://doi.org/10.3389/fnins.2016.00556">Link</a>
+              <p></p>
+            </td>
+        </tr> 
 
         <tr onmouseout="SID_2011()" onmouseover="SID_2011()">
             <td style="padding:20px;width:25%;vertical-align:middle">
