--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
             </td>
         </tr> 
 
+
+        <tr onmouseout="Sensors_2022()" onmouseover="Sensors_2022()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Sensors_2022.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>A Data-Driven Model with Feedback Calibration Embedded Blood Pressure Estimator Using Reflective Photoplethysmography</papertitle>
+                <br>
+              Jia-Wei Chen, Hsin-Kai Huang, Yu-Ting Fang, Yen-Ting Lin, Shih-Zhang Li, Bo-Wei Chen, Yu-Chun Lo, <strong>Po Chuan Chen</strong>,Ching-Fu Wang, You-Yin Chen<br>
+        <em>Sensors</em>, 2022
+              <a href="https://doi.org/10.3390/s22051873">Link</a>
+              <p></p>
+            </td>
+        </tr> 
+
+
         <tr onmouseout="Biosensors_2021()" onmouseover="Biosensors_2021()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
