--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="resume/Chen_Resume.pdf">CV</a> &nbsp/&nbsp
 <!--                 <a href="https://scholar.google.com/citations?user=jcgAPTYAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp -->
                 <a href="https://www.linkedin.com/in/pchen353/">Linkedin</a> &nbsp/&nbsp
-                <a href="https://twitter.com/po1057">Twitter</a>
+                <!-- <a href="https://twitter.com/po1057">Twitter</a> -->
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -141,7 +141,7 @@
         <tr onmouseout="Front_Neurosci_2016()" onmouseover="Front_Neurosci_2016()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/Front_Neurosci_2016.png' width="175">
+                <!-- <img src='images/Front_Neurosci_2016.png' width="175"> -->
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -219,7 +219,25 @@
               <p></p>
             </td>
           </tr> 
-         
+
+        <tr onmouseout="Fish Aggregation()" onmouseover="Fish Aggregation()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Fish_aggregation.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Fish Aggregation</papertitle>
+                <br>
+                 Simulated the fish schooling behaviors with shark intervention. Initialized a connected graph using Delaunay triangulation, so each fish can always find a path to the other fish. Formulated the equations to construct the fish motion of cohesion, separation, alignment,
+and dodge.
+                 <br>
+              <a href="https://youtu.be/ur-BrBaMQOw">Link</a>
+              <p></p>
+            </td>
+        </tr> 
+
            <tr onmouseout="Music Genre Classification()" onmouseover="Music Genre Classification()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
