--- a/index.html
+++ b/index.html
@@ -238,6 +238,24 @@ and dodge.
             </td>
         </tr> 
 
+        <tr onmouseout="Intelligent Shopping Assistance Car()" onmouseover="Intelligent Shopping Assistance Car()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Intelligent_Shopping_Assistance_Car.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Intelligent Shopping Assistance Car</papertitle>
+                <br>
+                 Developed a control law with object detection to follow a moving target at a certain
+distance and avoid obstacles at the same time.
+                 <br>
+              <a href="https://youtu.be/FS7lCo05tY4">Link</a>
+              <p></p>
+            </td>
+        </tr> 
+
            <tr onmouseout="Music Genre Classification()" onmouseover="Music Genre Classification()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
