--- a/index.html
+++ b/index.html
@@ -256,6 +256,25 @@ distance and avoid obstacles at the same time.
             </td>
         </tr> 
 
+
+        <tr onmouseout="Navigation in a Maze()" onmouseover="Navigation in a Maze()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Navigation_in_a_Maze.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle>Navigation in a Maze</papertitle>
+                <br>
+                 Utilized KNN to classify different traffic signs in the maze and designed a control law to
+navigate the turtlebot to the final goal without bumping any obstacles.
+                 <br>
+              <a href="https://youtu.be/tHgAMI4NZgM">Link</a>
+              <p></p>
+            </td>
+        </tr> 
+
            <tr onmouseout="Music Genre Classification()" onmouseover="Music Genre Classification()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
