--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <a href="mailto:pchen353@gatech.edu">Email</a> &nbsp/&nbsp
                 <a href="resume/Chen_Resume.pdf">CV</a> &nbsp/&nbsp
 <!--                 <a href="https://scholar.google.com/citations?user=jcgAPTYAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp -->
-                <a href="https://www.linkedin.com/in/pchen353/">Linkedin</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/pchen353/">Linkedin</a> 
+                <!-- &nbsp/&nbsp -->
                 <!-- <a href="https://twitter.com/po1057">Twitter</a> -->
               </p>
             </td>
