--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ navigate the turtlebot to the final goal without bumping any obstacles.
          <tr onmouseout="Interactive Plastic Box()" onmouseover="Interactive Plastic Box()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/Interactive Plastic Box.png' width="175">
+                <img src='images/Interactive_Plastic_Box.png' width="175">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
