--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ navigate the turtlebot to the final goal without bumping any obstacles.
               <p>
                 <papertitle>Interactive Plastic Box</papertitle>
                 <br>
-                 Utilized Support Machine Vector (SVM) for classifying acoustic spectrum
+                 Utilized Support Machine Vector (SVM) for classifying acoustic spectrum.
                  <br>
                  Oct 2013 ‑ July 2015
               <a href="https://youtu.be/N6SZp3iKMmE">Link</a>
