--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
                   <name><b>Po Chuan Chen</b></name>
               </p>
               <p>
-              	Hello! I am Po Chuan Chen (陳博詮), a passionate exoskeleton maker with a strong background in control and real-time systems. I am worknig in Dr. Aaron Young's lab (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received my MS in Electrical and Computer Enginneering, specializing in control. In the lab, I focus on developing innovative exoskeleton controllers that can adapt effectively to diverse walking conditions. I am driven by the goal of creating robust solutions that enhance the functionality of exoskeletons.
-<!--                 My name is Kevin Chih-Yao Ma (馬志堯). I am a Senior Research Scientist at Meta (formerly known as Facebook). In recent years, I have been primarily focusing data-efficient learning, including semi-supervised learning, self-supervised learning, federated learning, etc. Previously, I have conducted researches on large-scale video classification, fine-grained human action recognition, relational reasoning for video understanding, visually grounded image/video captioning, and vision-and-language navigation agents. -->
+              	Hello! I am Po Chuan Chen (陳博詮), a passionate exoskeleton maker with a strong background in control and real-time systems. I am worknig in Dr. Aaron Young's lab (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology, where I received my MS in Electrical and Computer Enginneering, specializing in control. In the lab, I focus on developing innovative exoskeleton controllers that can adapt effectively to diverse walking conditions. I am driven by the goal of creating robust solutions that enhance the functionality of exoskeletons.
               </p>
               <p>
                 Before I came to Georgia Tech, I worked for 3.5 years as an embedded software engineer in the television department at <a href="https://mediatek-marketing-production.cl-us-east-4.servd.dev/">Mediatek</a>. During my time there, my main focus was on the development of digital image processing algorithms and addressing real-time system concerns. In addition to my industrial experience,  I have also delved into various academic research areas spanning a wide range of fields. These include studying liquid crystal lenses for 3D displays, music genre classification, natural language processing, and controller for exoskeletons.
-<!--                 I worked with Dr. Aaron Young (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>) at Georgia Institute of Technology where I received . -->
-
               </p>
               <p style="text-align:center">
                 <a href="mailto:pchen353@gatech.edu">Email</a> &nbsp/&nbsp
