--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Which hip model best predicts biological torques across modes? A simulation study</papertitle>
+                <papertitle><strong>Which hip model best predicts biological torques across modes? A simulation study</strong></papertitle>
                 <br>
               <strong>Po Chuan Chen</strong>, Benjamin A. Shafer, Wei-Lin Du, Aaron J. Young, Gregory S. Sawicki
               <br>
